--- a/src/scss/components/_booking.scss
+++ b/src/scss/components/_booking.scss
@@ -74,21 +74,21 @@
     @include tablet {
       gap: 35px;
       width: 580px;
-      margin-bottom: 28px;
+      margin-bottom: 30px;
     }
     
     @include laptop {
       justify-content: space-between;
       gap: 59px;
       width: 780px;
-      margin-bottom: 28px;
+      margin-bottom: 30px;
     }
   }
 
   &__label {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    // gap: 15px;
     font-weight: 700;
     font-size: 12px;
     line-height: 130%;
@@ -119,7 +119,7 @@
     }
 
     @include laptop {
-      gap: 12px;
+      gap: 7px;
       font-size: 16px;
       border-radius: 12px;
     }
@@ -128,13 +128,14 @@
   &__label-select {
     position: relative;
     outline: none;
-    padding: 8px 15px 14px 9px;
+    padding: 8px 15px 0 9px;
 
     &:nth-child(1) {
-      padding: 8px 15px 14px 14px;
+      padding: 8px 11px 0 14px;
 
       @include tablet {
         padding: 12px 15px 18px 13px;
+        height: 99px;
       }
 
       @include laptop {
@@ -145,6 +146,7 @@
     &:nth-child(2) {
       @include tablet {
         padding: 12px 15px 18px 8px;
+        height: 99px;
       }
 
       @include laptop {
@@ -161,6 +163,7 @@
     &:nth-child(3) {
       @include tablet {
         padding: 12px 15px 18px 4px;
+        height: 99px;
       }
 
       @include laptop {
@@ -253,6 +256,7 @@
 
     @include laptop {
       justify-content: space-between;
+      gap: 24px 18px;
       margin-bottom: 29px;
     }
 
@@ -263,6 +267,7 @@
 
   &__label-input {
     padding: 8px 8px 13px;
+    gap: 15px;
     outline: none;
 
     &:nth-child(1) {
