--- a/src/scss/components/_global.scss
+++ b/src/scss/components/_global.scss
@@ -137,23 +137,11 @@ picture {
   transition: all .3s ease;
   padding: 7px 29px;
 
-  &:hover {
-    background-color: $bg-focus;
-  }
+  // &:hover {
+  //   background-color: $bg-focus;
+  // }
 
-  &:focus {
-    border-color: $border-focus;
-    background-color: $bg-focus;
-    // outline-color: $outline-focus;
-  }
-
-  &:active {
-    background-color: $bg-active;
-  }
-
-  &:disabled {
-    background-color: $border;
-  }
+  
 
   @include tablet {
     font-size: 14px;
@@ -165,11 +153,29 @@ picture {
     font-size: 18px;
     border-radius: 10px;
     padding: 18px 81px;
+
+    &:hover {
+      background-color: $bg-focus;
+    }
   }
 
   @include desktop {
     border-radius: 12px;
     padding: 24px 112px 25px 111px;
+  }
+
+  &:focus {
+    border-color: $border-focus;
+    background-color: $bg-focus;
+    // outline-color: $outline-focus;
+  }
+
+  &:disabled {
+    background-color: $border;
+  }
+
+  &:active {
+    background-color: $bg-active;
   }
 }
 
