--- a/src/scss/components/_booking.scss
+++ b/src/scss/components/_booking.scss
@@ -4,7 +4,7 @@
 
   @include tablet {
     padding-top: 39px;
-    padding-bottom: 102px;
+    padding-bottom: 100px;
   }
 
   @include laptop {
@@ -88,7 +88,6 @@
   &__label {
     display: flex;
     flex-direction: column;
-    // gap: 15px;
     font-weight: 700;
     font-size: 12px;
     line-height: 130%;
@@ -256,7 +255,7 @@
 
     @include laptop {
       justify-content: space-between;
-      gap: 24px 18px;
+      gap: 31px 18px;
       margin-bottom: 29px;
     }
 
@@ -266,9 +265,13 @@
   }
 
   &__label-input {
-    padding: 8px 8px 13px;
-    gap: 15px;
+    padding: 7px 8px 13px;
+    gap: 8px;
     outline: none;
+
+    @include laptop {
+      gap: 6px;
+    }
 
     &:nth-child(1) {
       @include tablet {
@@ -277,7 +280,7 @@
       }
 
       @include laptop {
-        padding: 13px 13px 33px;
+        padding: 13px 13px 28px;
       }
     }
 
@@ -309,6 +312,7 @@
   &__input {
     border: none;
     outline: none;
+    padding: 5px;
     
     &::placeholder {
       font-weight: 300;
