--- a/src/scss/components/_customSelect.scss
+++ b/src/scss/components/_customSelect.scss
@@ -26,7 +26,6 @@
     width: 100%;
     height: 32px;
     color: $white;
-    opacity: 0.7;
     text-align: left;
     cursor: pointer;
     user-select: none;
@@ -92,10 +91,6 @@
     display: grid;
   }
 
-  // &_show .itc-select1__dropdown {
-  //     display: block;
-  //   }
-
   &_show .itc-select__backdrop {
     display: block;
   }
@@ -109,8 +104,6 @@
     gap: 11px;
     height: 240px;
     border-right: 1px solid #C0C0C0;
-
-    
   }
 
   &__options2 {
@@ -179,10 +172,6 @@
     top: -13px;
     gap: 0px;
   }
-
-  // &__arrow {
-  //   position: relative;
-  // }
 
   &__toggle {
     display: flex;
@@ -379,28 +368,15 @@
     color: $primary;
     cursor: pointer;
     outline: none;
-
-    // &::before {
-    //   content: '';
-    //   width: 16px;
-    //   height: 16px;
-    //   border: 1px solid $primary;
-    // }
-
-    &:hover, &:focus {
-      // font-size: 18px;
-    }
   }
 
   &__input {
     width: 16px;
     height: 16px;
     border: 1px solid $primary;
-    // appearance: none;
   }
 
   &__option_selected {
-    // font-size: 18px;
     color: $secondary;
   }
 
@@ -418,15 +394,21 @@
 }
 
 #select-4 {
+
   & .itc-select__toggle {
-    font-weight: 300;
+    font-weight: 900;
     font-size: 12px;
     line-height: 130%;
-    color: #AFAFAF;
-    opacity: 0.7;
+    color: $primary;
+    border: none;
+    background-color: transparent;
 
-    &[data-index="undefined"] {
-      // color: $primary;
+    &::placeholder {
+      font-weight: 300;
+      font-size: 12px;
+      line-height: 130%;
+      color: #AFAFAF;
+      opacity: 0.7;
     }
 
     @include tablet {
@@ -449,7 +431,7 @@
     }
 
     @include laptop {
-      top: -2px;
+      top: 3px;
       font-size: 16px;
     }
   }
@@ -476,23 +458,23 @@
     gap: 0px;
   }
 
-  // &__arrow {
-  //   position: relative;
-    
-  // }
-
   &__toggle {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 32px;
-    color: #AFAFAF;
-    opacity: 0.7;
+    color: $primary;
+    border: none;
     text-align: left;
     cursor: pointer;
     user-select: none;
 
+    &::placeholder {
+      color: #AFAFAF;
+      opacity: 0.7;
+    }
+    
     &:focus {
       outline: none;
     }
@@ -603,12 +585,17 @@
     align-items: center;
     width: 125px;
     height: 32px;
-    color: #AFAFAF;
-    opacity: 0.7;
+    color: $primary;
     text-align: left;
+    border: none;
     cursor: pointer;
     user-select: none;
     margin-right: auto;
+
+    &::placeholder {
+      color: #AFAFAF;
+      opacity: 0.7;
+    }
 
     &:focus {
       outline: none;
@@ -692,29 +679,15 @@
     color: $primary;
     cursor: pointer;
     outline: none;
-
-    // &::before {
-    //   content: '';
-    //   width: 16px;
-    //   height: 16px;
-    //   border: 1px solid $primary;
-    // }
-
-    &:hover,
-    &:focus {
-      // font-size: 18px;
-    }
   }
 
   &__input {
     width: 16px;
     height: 16px;
     border: 1px solid $primary;
-    // appearance: none;
   }
 
   &__option_selected {
-    // font-size: 18px;
     color: $secondary;
   }
 
