--- a/src/scss/components/_booking.scss
+++ b/src/scss/components/_booking.scss
@@ -72,15 +72,14 @@
     margin-bottom: 15px;
     
     @include tablet {
-      gap: 35px;
-      width: 580px;
+      gap: 34px;
+      width: 100%;
       margin-bottom: 30px;
     }
     
     @include laptop {
       justify-content: space-between;
-      gap: 59px;
-      width: 780px;
+      gap: 57px;
       margin-bottom: 30px;
     }
   }
@@ -160,7 +159,7 @@
       }
 
       @include laptop {
-        padding: 12px 20px 12px 8px;
+        padding: 12px 20px 12px 9px;
       }
 
       & .form__label-arrow {
@@ -177,7 +176,7 @@
       }
 
       @include laptop {
-        padding: 12px 25px 12px 3px;
+        padding: 12px 25px 12px 6px;
       }
 
       & .form__label-arrow {
@@ -252,7 +251,7 @@
   }
 
   &__fieldset-input {
-    width: 250px;
+    width: 248px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 24px;
